# MCSrvMonitor-Frontend

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
src/: main.rs  pages.rs  utils.rs
src/app/: layout.tsx  page.tsx
src/app/server/: page.tsx
